--- a/assets/intro.css
+++ b/assets/intro.css
@@ -6,10 +6,13 @@ body {
     text-align: center; 
     padding-top: 100px;
     text-decoration: underline;
+    font-family: 'Rye', cursive;
 }
 .obj {
     color: whitesmoke;
     text-align: center;
+    font-family: 'Rye', cursive;
+
 }
 .objbox {
     align-content: center;
@@ -17,12 +20,15 @@ body {
 .objlist {
     color:whitesmoke;
     font-size: x-large;
+    font-family: 'Special Elite', cursive;
 }
 button {
-   width:100px;
+   width:300px;
    height:50px;
   position: relative;
-  left:600px;
+  left:500px;    
+  font-family: 'Special Elite', cursive;
+
 }
 .save {
 color:black; 
