--- a/assets/intro.css
+++ b/assets/intro.css
@@ -4,7 +4,7 @@ body {
 .GameTitle {
     color: whitesmoke;
     text-align: center; 
-    padding-top: 100px;
+    padding-top: 20px;
     text-decoration: underline;
     font-family: 'Rye', cursive;
 }
@@ -35,4 +35,11 @@ color:black;
 font-size: 25px;
  text-decoration: none;
 
+}
+img {
+    width:400px;
+    height:200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
