--- a/assets/main.css
+++ b/assets/main.css
@@ -7,7 +7,7 @@
 }
 body{
     
-    background-color: orangered;
+    background-color: lightslategrey;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
