--- a/assets/main.css
+++ b/assets/main.css
@@ -5,23 +5,23 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+/* body{
     
     background-color: lightslategrey;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
-}
-#mainlogo {
+} */
+/* #mainlogo {
    
     width:300px;
     height:100px;
 }
 .img{
     position: fixed;
-}
-#title{
+} */
+/* #title{
     text-align: center;
     padding: 0.8rem 0;
     font-size: 3rem;
@@ -31,8 +31,8 @@ body{
     height:100px;
   
    
-}
-.questions{
+} */
+/* .questions{
     margin: 3rem auto;
     width: 90vw;
     padding: 2rem;
@@ -41,13 +41,13 @@ body{
     border-radius: 1rem;
     font-family: 'Special Elite', cursive;
   
-}
-#question{
+} */
+/* #question{
     margin-bottom: 1rem;
     color: whitesmoke;
     font-family: 'Rye', cursive;
-}
-.option{
+} */
+/* .option{
     margin-bottom: 0.5rem;
     font-size: 1.2rem;
     border-bottom: solid 0.1rem blue;
@@ -58,18 +58,18 @@ body{
 }
 .option:hover{
     color: black;
-}
-ol{
+} */
+/* ol{
     position: relative;
     padding: 0 1.5rem;
     color: whitesmoke;
-}
-span{
+} */
+/* span{
     display: block;
     padding: 0.1rem 0.7rem;
     border-radius: 1rem;
-}
-#answer{
+} */
+/* #answer{
     margin-top: 2.5rem;
 }
 #stat{
@@ -78,8 +78,8 @@ span{
 }
 .buttons{
     text-align: center;
-}
-button{
+} */
+/* button{
     padding: 0.2rem 1.5rem;
     border: none;
     outline: none;
@@ -91,8 +91,8 @@ button{
 }
 button:active{
     background: grey;
-}
-#scoreboard,#answerBank{
+} */
+/* #scoreboard,#answerBank{
     width: 20rem;
     background:#253439 ;
     padding: 2rem;
@@ -101,20 +101,20 @@ button:active{
     position: relative;
     top: 5rem;
     display: none;
-}
-#score-title{
+} */
+/* #score-title{
     margin: 1rem 0;
     color: whitesmoke;
     font-family: 'Rye', cursive;
-}
-#score-btn,#check-answer{
+} */
+/* #score-btn,#check-answer{
     margin-top: 1rem;
-}
-#score{
+} */
+/* #score{
     font-size: 2.5rem;
     color: whitesmoke;
-}
-#answerBank li{
+} */
+/* #answerBank li{
     text-align: left;
     margin-bottom: 0.2rem;
     font-size: larger;
@@ -124,11 +124,11 @@ button:active{
     margin-top: 1rem;
     color: whitesmoke;
     font-family: 'Special Elite', cursive;
-}
-h2 {
+} */
+/* h2 {
     color: whitesmoke;
     font-family: 'Rye', cursive;
-}
+} */
   
   
   
