--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,53 @@
+body {
+  background-color: #253439;
+}
+
+.GameTitle {
+  color: whitesmoke;
+  text-align: center;
+  padding-top: 20px;
+  text-decoration: underline;
+  font-family: "Rye", cursive;
+}
+
+.obj {
+  color: whitesmoke;
+  text-align: center;
+  font-family: "Rye", cursive;
+}
+
+.objbox {
+  align-content: center;
+}
+
+.objlist {
+  color: whitesmoke;
+  font-size: x-large;
+  font-family: "Special Elite", cursive;
+}
+
+button {
+  width: 300px;
+  height: 50px;
+  position: relative;
+  left: 500px;
+  font-family: "Special Elite", cursive;
+}
+
+.save {
+  color: black;
+  font-size: 25px;
+  text-decoration: none;
+}
+
+img {
+  width: 400px;
+  height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -15,10 +65,7 @@
 .img {
   position: fixed;
 }
-#mainlogo {
-    width: 300px;
-    height: 100px;
-}
+
 #title {
   text-align: center;
   padding: 0.8rem 0;
@@ -152,6 +199,4 @@ ol {
   position: relative;
   top: 5rem;
   display: none;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
