--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .body {
-  background-color: grey;
+  background-color: lightslategray;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
