--- a/scss/intro.scss
+++ b/scss/intro.scss
@@ -1,8 +1,8 @@
-$color-dark: #253439;
-$color-white: whitesmoke;
-$rye: 'Rye', cursive;
-$special-elite: 'Special Elite', cursive;
-
+// $color-dark: #253439;
+// $color-white: whitesmoke;
+// $rye: 'Rye', cursive;
+// $special-elite: 'Special Elite', cursive;
+@import "variables";
 
 
 body {
